# iot-intergration-project

./: .env.example  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  conanfile.txt  docker-compose.yaml  generate_idl  generate_proto  rtps.ini
docker/: CMakeLists.txt
docs/: ARCHITECTURE.md  GIT_STRATEGY.md  iot-integration-project-architecture.md
idl/SensorData/: SensorData.idl  SensorDataC.cpp  SensorDataC.h  SensorDataS.cpp  SensorDataS.h  SensorDataTypeSupport.idl  SensorDataTypeSupportC.cpp  SensorDataTypeSupportC.h  SensorDataTypeSupportImpl.cpp  SensorDataTypeSupportImpl.h  SensorDataTypeSupportS.cpp  SensorDataTypeSupportS.h
proto/: Sensor.proto  sensor.proto
simulator/: client.py  sensor_pb2.py  sensor_pb2_grpc.py
src/: app.cpp  main.cpp
src/adapters/abstract_adapters/observable/: interface_observable.h  observable.cpp  observable.h
src/adapters/interface_adapters/: interface_bridge_manager.h  interface_transport_adapter.h
src/adapters/service_adapters/: bridge_manager.cpp  bridge_manager.h
src/adapters/service_adapters/dds_adapters/: dds_adapter.cpp  dds_adapter.h
src/adapters/service_adapters/websocket_adapters/: websocket_adapter.cpp  websocket_adapter.h
src/controllers/: sensor_controller.cpp  sensor_controller.h
src/dds/: dds_publisher.cpp  dds_publisher.h
src/grpc/: sensor_service.h  sensorservice.cpp
src/handlers/observer/: observer.h
src/handlers/sensor_data_log_handler/: sensor_data_log_handler.cpp  sensor_data_log_handler.h
src/handlers/sensor_data_validator/: sensor_data_validator.cpp  sensor_data_validator.h
src/utils/: json_helper.h  logger.h
src/utils/log_util/: logger.h
src/websocket/: ws_server.cpp  ws_server.h
